--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "request": "^2.88.2",
     "sass": "^1.37.5"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/react": "17.0.16",
+    "@types/request": "^2.48.7",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
