--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
+    "joi": "^17.4.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/joi": "^17.2.3",
     "@types/react": "17.0.16",
     "@types/request": "^2.48.7",
     "eslint": "7.32.0",
