--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "serverless --debug"
   },
   "dependencies": {
+    "@sls-next/serverless-component": "^3.6.0",
     "dotenv": "^10.0.0",
     "next": "11.0.1",
     "react": "17.0.2",
@@ -22,6 +24,7 @@
     "@types/request": "^2.48.7",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "serverless": "^2.68.0",
     "typescript": "4.3.5"
   }
 }
