--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sls-next/serverless-component": "^3.6.0",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "next": "11.0.1",
     "react": "17.0.2",
