update schedule timezones

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,7 @@
 name: rl-widgets
 
 rl-widgets-serverless:
-  component: "@sls-next/serverless-component@3.6.0"
+  component: '@sls-next/serverless-component@3.6.0'
   inputs:
     memory: 1024
+    bucketName: rl-widgets-prod
