--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "serverless --debug"
+    "deploy": "AWS_PROFILE=rl-stats serverless --debug"
   },
   "dependencies": {
     "@sls-next/serverless-component": "^3.6.0",
@@ -23,8 +23,13 @@
     "@types/dotenv": "^8.2.0",
     "@types/react": "17.0.16",
     "@types/request": "^2.48.7",
-    "eslint": "7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^7.2.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
     "serverless": "^2.68.0",
     "typescript": "4.3.5"
   }
