--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "request": "^2.88.2",
-    "sass": "^1.37.5"
+    "sass": "^1.37.5",
+    "stripe": "^10.15.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
